--- a/Fundraising/wwwroot/ProductPage/filter.html
+++ b/Fundraising/wwwroot/ProductPage/filter.html
@@ -183,7 +183,7 @@
         </div>
     </div>
 
-    <script src="./layout/layout.js"></script>
+    <script src="../layout/layout.js"></script>
     <script>
         /*搜尋*/
         document.getElementById("filtersearch")
