--- a/Fundraising/wwwroot/ProductPage/product.html
+++ b/Fundraising/wwwroot/ProductPage/product.html
@@ -15,17 +15,19 @@
 </head>
 
 <body>
-    <div class="container"> 
+    <div class="container">
         <!-- 標題 -->
         <h1 class="productpage pb-4">POIEMA Evo 空氣淨化器｜大口呼吸．淨化革命{{fliterList.length}}</h1>
         <div class="row">
 
             <!--左邊欄位-->
             <div class="col-sm-7">
-                <div><iframe width="100%" height="350" src="https://www.youtube.com/embed/77PjY-PfNRY"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe></div>
+                <div>
+                    <iframe width="100%" height="350" src="https://www.youtube.com/embed/77PjY-PfNRY"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
 
             </div>
 
@@ -37,12 +39,12 @@
                     <div class="wid progress-bar bg-success" role="progressbar" :style="{width: item.percent+'%'}" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
                 <!--<div class="pb-5 myprogress">
-        <div class="progress2 progress-moved">
-            <div class="progress-bar2">
-                <p style="padding-left: 5px; font-size: 14px; color: white;">85%</p>
-            </div>
-        </div>
-    </div>-->
+                    <div class="progress2 progress-moved">
+                        <div class="progress-bar2">
+                            <p style="padding-left: 5px; font-size: 14px; color: white;">85%</p>
+                        </div>
+                    </div>
+                </div>-->
                 <div class="pb-2">
                     <span>贊助人數 </span>
                     <span>119</span>
@@ -73,40 +75,40 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="./product.html">專案內容</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">專案News</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./faq.html">常見問題</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./comments.html">留言</a>
-              </li>
-            </ul>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">專案News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./faq.html">常見問題</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./comments.html">留言</a>
+                    </li>
+                </ul>
 
-            <div class="col-sm-4">
+                <div class="col-sm-4">
 
-                <a class="btn btn-danger " style="width: 300px;"
-                href="./project.html">贊助專案</a>
-                <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
-                <div style="width: 145px;">
-    
+                    <a class="btn btn-danger " style="width: 300px;"
+                       href="./project.html">贊助專案</a>
+                    <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                    <div style="width: 145px;">
+
+                    </div>
                 </div>
+                <div style="width: 20px;"> </div>
+                <!-- <div class="col-sm-1"> </div> -->
             </div>
-            <div style="width: 20px;"> </div>
-            <!-- <div class="col-sm-1"> </div> -->
-          </div>
         </div>
-      </nav>
-      <!-- 商品分頁導覽列 -->
+    </nav>
+    <!-- 商品分頁導覽列 -->
 
-      <br>
-      <div class="container">
+    <br>
+    <div class="container">
         <div class="row">
 
             <!--左邊欄位-->
@@ -160,6 +162,8 @@
     <h1>000</h1>
     <h1>000</h1>
     <h1>000</h1>
+
+    <script src="../layout/layout.js"></script>
 
     <script>
         var app = new Vue({
