--- a/Fundraising/wwwroot/Proposal/myproposal.html
+++ b/Fundraising/wwwroot/Proposal/myproposal.html
@@ -89,8 +89,7 @@
     <div class="propalcontent2">
         <div style="padding-bottom: 50px;">
             <h2>為什麼需要群眾集資？</h2>
-            <div class="row row-cols-2"
-                style="padding: 30px 450px 50px 450px; width: 100%;">
+            <div class="row row-cols-2" style="padding: 30px 450px 50px 450px; width: 100%;">
                 <div>
                     <img src="../img/播放.png" alt="">
                 </div>
@@ -100,8 +99,7 @@
                 </div>
             </div>
 
-            <div class="row row-cols-2"
-                style="padding: 30px 450px 50px 450px; width: 100%;">
+            <div class="row row-cols-2" style="padding: 30px 450px 50px 450px; width: 100%;">
                 <div class="p2">
                     <h4>取得資源</h4>
                     <P>想要做的事很多，但缺少資源？透過群眾力量成功解鎖階段目標，除了資金、物資，都能透過平台使計畫逐步落地實現！</P>
@@ -111,8 +109,7 @@
                 </div>
             </div>
 
-            <div class="row row-cols-2"
-                style="padding: 30px 450px 50px 450px; width: 100%;">
+            <div class="row row-cols-2" style="padding: 30px 450px 50px 450px; width: 100%;">
                 <div>
                     <img src="../img/播放.png" alt="">
                 </div>
@@ -128,8 +125,7 @@
     <div class="propalcontent3">
         <div>
             <h2>為何選擇XX提案上架</h2>
-            <div class="row row-cols-3"
-                style="padding: 30px 450px 0px 450px;">
+            <div class="row row-cols-3" style="padding: 30px 450px 0px 450px;">
                 <div>
                     <a class="btn" href='https://www.zeczec.com/'><img src="../img/播放.png" alt="">
                         <h4>優點一</h4>
@@ -170,6 +166,7 @@
             <a href="./proposal.html" class="btn btn-info" role="button" style="padding: 10px 50px;">開始提案</a>
         </div>
     </div>
+    <script src="../layout/layout.js"></script>
 
 </body>
 
