--- a/Fundraising/wwwroot/MemberCentre/UserMessage.html
+++ b/Fundraising/wwwroot/MemberCentre/UserMessage.html
@@ -11,6 +11,16 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./message.css" />
+    <style>
+      .card {
+        box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+        width: 80%;
+        transition: 0.5s;
+        border: 0;
+        border-radius: 0.55rem;
+        position: relative;
+      }
+    </style>
     <title>聯絡訊息</title>
   </head>
   <body>
@@ -258,7 +268,7 @@
       integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
       crossorigin="anonymous"
     ></script>
-    <script src="../layout/layout_MemberCentre.js"></script>
+    <script src="../layout/membercentre_layout.js"></script>
     <script src="./message.js"></script>
   </body>
 </html>
