--- a/Fundraising/wwwroot/MemberCentre/UserOrderDetail.html
+++ b/Fundraising/wwwroot/MemberCentre/UserOrderDetail.html
@@ -11,9 +11,18 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./stepper.css" />
+    <style>
+      .card {
+        box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+        width: 80%;
+        transition: 0.5s;
+        border: 0;
+        border-radius: 0.55rem;
+        position: relative;
+      }
+    </style>
     <title>訂單修改</title>
   </head>
-  <style></style>
   <body>
     <div class="container">
       <div class="mx-auto" style="width: 80%">
@@ -158,6 +167,6 @@
       integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
       crossorigin="anonymous"
     ></script>
-    <script src="../layout/layout_MemberCentre.js"></script>
+    <script src="../layout/membercentre_layout.js"></script>
   </body>
 </html>
