--- a/Fundraising/wwwroot/MemberCentre/Userlayout.html
+++ b/Fundraising/wwwroot/MemberCentre/Userlayout.html
@@ -10,7 +10,6 @@
       integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
       crossorigin="anonymous"
     />
-    <title>Layout</title>
     <style>
       .memberlink:focus {
         box-shadow: none;
@@ -21,7 +20,16 @@
       .active {
         text-decoration: underline;
       }
+      .card {
+        box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+        width: 80%;
+        transition: 0.5s;
+        border: 0;
+        border-radius: 0.55rem;
+        position: relative;
+      }
     </style>
+    <title>Layout</title>
   </head>
   <body>
     <div id="MemberCentre" class="row py-3 mx-auto">
@@ -61,6 +69,6 @@
       integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
       crossorigin="anonymous"
     ></script>
-    <script src="../layout/layout_MemberCentre.js"></script>
+    <script src="../layout/membercentre_layout.js"></script>
   </body>
 </html>
