--- a/Fundraising/wwwroot/MemberCentre/ProjectManage.html
+++ b/Fundraising/wwwroot/MemberCentre/ProjectManage.html
@@ -11,9 +11,18 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./stepper.css" />
+    <style>
+      .card {
+        box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+        width: 80%;
+        transition: 0.5s;
+        border: 0;
+        border-radius: 0.55rem;
+        position: relative;
+      }
+    </style>
     <title>專案清單</title>
   </head>
-  <style></style>
   <body>
     <div class="container">
       <div class="mx-auto" style="width: 90%">
