--- a/Fundraising/wwwroot/MemberCentre/UserInfo.html
+++ b/Fundraising/wwwroot/MemberCentre/UserInfo.html
@@ -10,7 +10,13 @@
       integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
       crossorigin="anonymous"
     />
-    <title>個人頁面</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js"
+      integrity="sha512-QTnb9BQkG4fBYIt9JGvYmxPpd6TBeKp6lsUrtiVQsrJ9sb33Bn9s0wMQO9qVBFbPX3xHRAsBHvXlcsrnJjExjg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <style>
       #ProfileImg {
         object-fit: cover;
@@ -34,14 +40,23 @@
       a > img {
         width: 30%;
       }
+      .card {
+        box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+        width: 80%;
+        transition: 0.5s;
+        border: 0;
+        border-radius: 0.55rem;
+        position: relative;
+      }
     </style>
+    <title>個人頁面</title>
   </head>
   <body>
     <div class="container">
       <div class="mx-auto" style="width: 80%">
         <h5 class="ms-4 mt-3">個人頁面</h5>
       </div>
-      <div class="card mx-auto mt-3">
+      <div class="card mx-auto mt-3" id="app">
         <div class="row mt-5">
           <!-- 個人頭像 -->
           <div
@@ -49,7 +64,7 @@
           >
             <img
               src="../img/PersonalPhoto.jpg"
-              alt="Nick"
+              alt="PersonalPhoto"
               class="rounded-circle"
               id="ProfileImg"
             />
@@ -60,9 +75,9 @@
             class="col-sm-6 mt-3 d-flex justify-content-sm-start justify-content-center"
           >
             <div class="text-center text-sm-start">
-              <h2>Nick</h2>
-              <p class="mt-4">已贊助計畫：2</p>
-              <p>已發起計畫：0</p>
+              <h2>{{userdata.userNickname}}</h2>
+              <p class="mt-4">已贊助計畫：{{userdata.orderCNT}}</p>
+              <p>已發起計畫：{{userdata.productCNT}}</p>
             </div>
           </div>
         </div>
@@ -70,9 +85,7 @@
         <!-- 個人介紹 -->
         <div id="intro" class="mx-auto mb-4">
           <h5 class="mt-3 pb-2 text-center">個人介紹</h5>
-          <p>
-            我叫小明，我來自台灣。我是一名大學生，專攻資訊工程。我喜歡運動，特別是跑步和游泳。我也很喜歡音樂，常常會花時間在吉他和鋼琴上練習。在大學期間，我曾參加過幾個志願者團體，包括幫助貧困家庭的社區服務和環保活動。我希望能在未來的工作中繼續幫助社會，做出貢獻。
-          </p>
+          <p>{{userdata.userIntro}}</p>
         </div>
 
         <div>
@@ -96,7 +109,7 @@
 
           <!-- 贊助/發起項目 -->
           <div class="row" id="ProductsRow">
-            <div class="col-8 mx-auto">
+            <div class="col-8 mx-auto" v-for="item in ProductsList">
               <a
                 href="#"
                 class="bg-body rounded btn btn-default shadow p-2 mb-3"
@@ -110,12 +123,10 @@
                     />
                   </div>
                   <div class="col-md-9 my-auto">
-                    <h5 class="text-md-start">
-                      家長必備! 圈圈的《祕密派對》-
-                      台灣原創專為2-6歲設計的身體保護翻翻書
-                    </h5>
+                    <h5 class="text-md-start">{{item.prod.productTitle}}</h5>
+                    <!-- <p class="text-md-start">{{item.prod.startime}}~{{item.prod.endtime}}</p> -->
                     <p class="text-muted fs-6 text-md-end">
-                      提案者 勵馨基金會彰化分事務所
+                      提案者 {{item.userNickname}}
                     </p>
                   </div>
                 </div>
@@ -131,6 +142,7 @@
       integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
       crossorigin="anonymous"
     ></script>
-    <script src="../layout/layout_MemberCentre.js"></script>
+    <script src="../layout/membercentre_layout.js"></script>
+    <script src="./Js_src/UserInfo.js"></script>
   </body>
 </html>
