--- a/Fundraising/wwwroot/MemberCentre/UserMessage.html
+++ b/Fundraising/wwwroot/MemberCentre/UserMessage.html
@@ -269,6 +269,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="../layout/membercentre_layout.js"></script>
-    <script src="./message.js"></script>
+    <script src="./Js_src/message.js"></script>
   </body>
 </html>
