--- a/Fundraising/wwwroot/MemberCentre/UserSetting.html
+++ b/Fundraising/wwwroot/MemberCentre/UserSetting.html
@@ -135,7 +135,9 @@
               ></textarea>
             </div>
             <div class="text-end">
-              <button type="submit" class="btn btn-success">儲存</button>
+              <button type="button" onclick="test()" class="btn btn-success">
+                儲存
+              </button>
             </div>
           </form>
         </div>
