--- a/Fundraising/wwwroot/Proposal/proposal.html
+++ b/Fundraising/wwwroot/Proposal/proposal.html
@@ -149,7 +149,7 @@
                         </ul>
                         <br>
                         <div class="pagebtndiv">
-                            <input id="nextpage1" class="pagebtn btn btn-primary" type="button" value="下一頁">
+                            <input id="nextpage1" class="pagebtn btn btn-primary" type="button" value="下一頁&nbsp►">
                         </div>
                     </div>
                 </div>
@@ -179,9 +179,8 @@
                     </div>
                     <br><br><br>
                     <div class="pagebtndiv">
-                        <input id="prepage1" class="pagebtn btn btn-primary" type="button" value="上一頁">
-                        <span>&nbsp</span>
-                        <input id="nextpage2" class="pagebtn btn btn-primary" type="button" value="下一頁">
+                        <input id="prepage1" class="pagebtn btn btn-primary" type="button" value="◀&nbsp上一頁">
+                        <input id="nextpage2" class="pagebtn btn btn-primary" type="button" value="下一頁&nbsp►">
                     </div>
                 </div>
 
@@ -280,12 +279,11 @@
                             </div>
                             <!-- 按鈕 -->
                             <div style="position: relative; float: left;">
-                                <input id="addplan" class="pagebtn btn btn-primary" type="button" value="新增方案">
+                                <input id="addplan" class="QAaddbtn btn btn-primary" type="button" value="+ 新增方案">
                             </div>
                             <div class="pagebtndiv" style="position: relative; left: 60px;">
-                                <input id="prepage2" class="pagebtn btn btn-primary" type="button" value="上一頁">
-                                <span>&nbsp</span>
-                                <input id="nextpage3" class="pagebtn btn btn-primary" type="button" value="下一頁">
+                                <input id="prepage2" class="pagebtn btn btn-primary" type="button" value="◀&nbsp上一頁">
+                                <input id="nextpage3" class="pagebtn btn btn-primary" type="button" value="下一頁&nbsp►">
                             </div>
                         </div>
                     </div>
@@ -373,9 +371,8 @@
                     </div>
 
                     <div class="pagebtndiv">
-                        <input id="prepage3" class="pagebtn btn btn-primary" type="button" value="上一頁">
-                        <span>&nbsp</span>
-                        <input class="pagebtn btn btn-primary" type="button" id="proposalsubmit" value="提交專案">
+                        <input id="prepage3" class="pagebtn btn btn-primary" type="button" value="◀&nbsp上一頁">
+                        <input class="QAaddbtn btn btn-primary" type="button" id="proposalsubmit" value="提交專案">
                     </div>
 
                 </div>
