--- a/Fundraising/wwwroot/Proposal/myproposal.html
+++ b/Fundraising/wwwroot/Proposal/myproposal.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
         * {
@@ -44,8 +46,10 @@
             padding: 150px;
             /* margin-top: -15px; */
             position: relative;
-            background-image: url("../img/proposal.jpg");
+            background-image: url("../img/proposal.png");
             background-size: cover;
+            color: white;
+            text-shadow: 0.1em 0.1em 0.1em black;
         }
 
         .propaltitle2,
@@ -81,10 +85,12 @@
         .propalfoot {
             background-color: gainsboro;
             padding: 150px;
-            position: relative;
-            background-image: url("../img/proposal.jpg");
+            position: relative;            
+            background-image: url("../img/proposal2.png");
             background-size: cover;
-            margin-bottom: -100px;
+            color: white;
+            text-shadow: 0.1em 0.1em 0.1em black;
+            margin-bottom: -100px;            
         }
 
         .intro {
@@ -105,9 +111,9 @@
             border: solid 2px #198754;
         }
 
-        .good{
-            padding: 0px 42px; 
-            text-align:center;
+        .good {
+            padding: 0px 42px;
+            text-align: center;
         }
     </style>
 </head>
