--- a/Fundraising/wwwroot/Proposal/myproposal.html
+++ b/Fundraising/wwwroot/Proposal/myproposal.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>提案介紹</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
@@ -74,7 +73,7 @@
         }
 
         .propalcontent3 {
-            background-color: #dae2b6;
+            background-color: white;
             padding: 50px 0px 30px 0px;
         }
 
@@ -212,7 +211,7 @@
                 <h4>提案有什麼限制？計畫失敗還會收費嗎？</h4>
                 <h4>上架平台會有集資顧問協助嗎？</h4>
                 <h4 style="padding-bottom: 20px;">可以先參考：</h4>
-                <button type="button" class="qAbtn btn btn-outline-primary">提案常見問題</button>
+                <button type="button" class="abtn btn btn-outline-primary">提案常見問題</button>
             </div>
         </div>
     </div>
