--- a/Fundraising/wwwroot/Proposal/proposal.html
+++ b/Fundraising/wwwroot/Proposal/proposal.html
@@ -5,21 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>提案</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../ckeditor/ckeditor.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="./proposal.css">
-    
+
 
 </head>
 
 <body>
+    <img id="pencil" src="../img/pencil.png" alt="">
+    <img id="eraser" src="../img/eraser.png" alt="">
     <form name="proposalfrom" class="needs-validation" novalidate>
         <div>
             <!-- 頁籤 -->
@@ -85,18 +87,21 @@
                                 </div>
                             </li>
 
-                            <li class="list-group-item" style="text-align: left;">
-                                <span class="dot">●</span>
-                                <span class="boldfont">專案卡預覽</span>
+                            <li class="list-group-item" style="text-align: center;">
+                                <div style="text-align: left;">
+                                    <span class="dot">●</span>
+                                    <span class="boldfont">專案卡預覽</span>
+                                </div>
                                 <div
-                                    style="border: black 1px solid; background-color: white !important; width: 251px; height: 279px;">
+                                    style="border: black 1px solid; background-color: white !important; width: 252px; height: 279px;">
                                     <!-- 專案卡預覽 -->
                                     <img id="preview_progressbarTW_img" style="width: 250px; height: 150px;"
                                         class="selectedimg" src="../img/coverphoto.png" alt="">
                                     <textarea disabled style="border: none; background-color: white; resize: none;"
-                                        name="cardtitle" id="cardtitle" cols="28" rows="2"
+                                        name="cardtitle" id="cardtitle" cols="26" rows="3"
                                         placeholder="例：40個字以內的專案標題"></textarea>
-                                    <p style="font-size: 14px; padding: 40px 0px 0px 5px;">設計by XXX</p>
+                                    <p style="text-align: left; font-size: 14px; padding: 15px 0px 0px 10px;">設計by XXX
+                                    </p>
                                 </div>
                             </li>
                         </ul>
@@ -177,7 +182,7 @@
                     <div style="text-align: left;">
                         <input onclick="add()" class="QAaddbtn btn btn-primary" type="button" value="+ 增加常見問題">
                     </div>
-                    <br><br><br>
+
                     <div class="pagebtndiv">
                         <input id="prepage1" class="pagebtn btn btn-primary" type="button" value="◀&nbsp上一頁">
                         <input id="nextpage2" class="pagebtn btn btn-primary" type="button" value="下一頁&nbsp►">
@@ -225,13 +230,13 @@
                             <!-- 方案 -->
                             <div id="plandiv" style="width: 110%;">
                                 <div>
-                                    <div class="palninputdiv"
+                                    <div class="planinputdiv"
                                         style="display: flex; width:100%; border:solid gray 1px; background-color: white;">
                                         <div>
                                             <div>
                                                 <img id="preview_plan_img"
                                                     style=" width: 270px; height: 90px; padding-left: 5px; padding-top: 5px;"
-                                                    class="selectedimg" src="../img/plancoverimg.png" alt="">
+                                                    class="selectedimg" src="../img/coverimg.png" alt="">
                                                 <div
                                                     style="position: relative; display: flex; text-align: left; left: 5px; padding: 5px; width: 100%;">
                                                     <div style="height: 30px;">
@@ -278,9 +283,10 @@
                                 </div>
                             </div>
                             <!-- 按鈕 -->
-                            <div style="position: relative; float: left;">
+                            <div style="position: relative; text-align: left;">
                                 <input id="addplan" class="QAaddbtn btn btn-primary" type="button" value="+ 新增方案">
                             </div>
+                            <br>
                             <div class="pagebtndiv" style="position: relative; left: 60px;">
                                 <input id="prepage2" class="pagebtn btn btn-primary" type="button" value="◀&nbsp上一頁">
                                 <input id="nextpage3" class="pagebtn btn btn-primary" type="button" value="下一頁&nbsp►">
@@ -345,9 +351,8 @@
                                     <span class="dot">●</span>
                                     <label class="boldfont" for="PrincipalPhone">行動電話</label>
                                     <br>
-                                    <input type="tel"
-                                        style="border-radius: 5px;border: black 1px solid" name="PrincipalPhone"
-                                        id="PrincipalPhone" class="form-control" required>
+                                    <input type="tel" style="border-radius: 5px;border: black 1px solid"
+                                        name="PrincipalPhone" id="PrincipalPhone" class="form-control" required>
                                     <div class="invalid-feedback">
                                         請輸入正確格式的行動電話！
                                     </div>
@@ -372,6 +377,7 @@
 
                     <div class="pagebtndiv">
                         <input id="prepage3" class="pagebtn btn btn-primary" type="button" value="◀&nbsp上一頁">
+                        <span>&nbsp</span>
                         <input class="QAaddbtn btn btn-primary" type="button" id="proposalsubmit" value="提交專案">
                     </div>
 
