--- a/Fundraising/wwwroot/Proposal/test.html
+++ b/Fundraising/wwwroot/Proposal/test.html
@@ -2,50 +2,26 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <title>点击其他地方div消失</title>
-    <style>
-        #b {
-            width: 300px;
-            height: 300px;
-            border: 1px solid black;
-            display: none
-        }
-    </style>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
 </head>
 
 <body>
-    <button id="a">aaa</button>
 
-    <div id="b">
-        <p>看什么看</p>
-        <p>看什么看</p>
+    <div class="dropdown">
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <img class="headernav loginicon" src="../img/loginicon.png" alt="">
+        </a>
+
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <li><a class="dropdown-item" href="#">註冊</a></li>
+            <li><a class="dropdown-item" href="#">登入</a></li>
+        </ul>
     </div>
-    <script>
-        function e(obj) {
-            return document.getElementById(obj)
-        }
-        e('a').onclick = function (event) {
-            e('b').style.display = 'block';
-            stopBubble(event);
-            document.onclick = function () {
-                e('b').style.display = 'none';
-                document.onclick = null;
-            }
-        }
-
-        e('b').onclick = function (event) {
-            stopBubble(event);
-        }
-
-        function stopBubble(e) {
-            if (e && e.stopPropagation) {
-                e.stopPropagation();
-            } else {
-                window.event.cancelBubble = true;
-            }
-        }
-    </script>
 </body>
 
 </html>
