--- a/Fundraising/wwwroot/Proposal/test4.html
+++ b/Fundraising/wwwroot/Proposal/test4.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <a class="headernav" href="#"><img class="class" src="../img/loginicon.png" alt=""></a>
+    <input type="date" name="" id="apple">
+    <button onclick="OK()">123</button>
+
+    <script>
+        function OK() {
+            var bee= document.getElementById("apple").value
+            alert(typeof( bee));
+        }
+    </script>
 </body>
 </html>
