--- a/Fundraising/wwwroot/MemberCentre/UserProject.html
+++ b/Fundraising/wwwroot/MemberCentre/UserProject.html
@@ -11,14 +11,23 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./stepper.css" />
-    <style>.card {
-      box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
-      width: 80%;
-      transition: 0.5s;
-      border: 0;
-      border-radius: 0.55rem;
-      position: relative;
-  }</style>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js"
+      integrity="sha512-QTnb9BQkG4fBYIt9JGvYmxPpd6TBeKp6lsUrtiVQsrJ9sb33Bn9s0wMQO9qVBFbPX3xHRAsBHvXlcsrnJjExjg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <style>
+      .card {
+        box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+        width: 80%;
+        transition: 0.5s;
+        border: 0;
+        border-radius: 0.55rem;
+        position: relative;
+      }
+    </style>
     <title>提案紀錄</title>
   </head>
   <body>
@@ -26,7 +35,7 @@
       <div class="mx-auto" style="width: 90%">
         <h5 class="ms-4 mt-3">提案紀錄</h5>
       </div>
-      <div class="card mt-3 mx-auto" style="width: 90%">
+      <div class="card mt-3 mx-auto" style="width: 90%" id="app">
         <table class="table table-hover align-middle text-center">
           <thead>
             <tr>
@@ -41,267 +50,57 @@
             </tr>
           </thead>
           <tbody>
-            <!-- 審核中 -->
-            <tr>
+            <tr v-for="prod in prodlist">
               <!-- 圖片 -->
-              <td class="my-auto" style="max-width: 100px">
+              <td class="my-auto">
                 <a href="#"
                   ><img
-                    src="../img/product.png"
+                    :src="prodlist.coverphoto"
                     class="img-fluid rounded-start"
                     alt="..."
+                    style="
+                      max-width: 125px;
+                      max-height: 100px;
+                      object-fit: contain;
+                    "
                 /></a>
               </td>
               <!-- 專案名稱 -->
               <th class="text-start" style="max-width: 200px">
                 <a href="#" style="text-decoration: none; color: #212529">
-                  家長必備! 圈圈的《祕密派對》-
-                  台灣原創專為2-6歲設計的身體保護翻翻書
+                  {{prod.productTitle}}
                 </a>
               </th>
               <!-- 目前金額 -->
-              <td>0</td>
+              <td>{{prod.currentAmount}}</td>
               <!-- 目標金額 -->
-              <td>2,000,000</td>
+              <td>{{prod.targetAmount}}</td>
               <!-- 起始日期 -->
-              <td>2023-01-01</td>
+              <td>{{prod.startime}}</td>
               <!-- 結束日期 -->
-              <td>2023-01-31</td>
+              <td>{{prod.endtime}}</td>
               <!-- 目前狀態 -->
-              <td>審核中</td>
-              <td></td>
-            </tr>
-            <!-- 審核通過 -->
-            <tr>
-              <!-- 圖片 -->
-              <td class="my-auto" style="max-width: 100px">
-                <a href="#"
-                  ><img
-                    src="../img/product.png"
-                    class="img-fluid rounded-start"
-                    alt="..."
-                /></a>
-              </td>
-              <!-- 專案名稱 -->
-              <th class="text-start" style="max-width: 200px">
-                <a href="#" style="text-decoration: none; color: #212529">
-                  家長必備! 圈圈的《祕密派對》-
-                  台灣原創專為2-6歲設計的身體保護翻翻書
-                </a>
-              </th>
-              <!-- 目前金額 -->
-              <td>0</td>
-              <!-- 目標金額 -->
-              <td>2,000,000</td>
-              <!-- 起始日期 -->
-              <td>2023-01-01</td>
-              <!-- 結束日期 -->
-              <td>2023-01-31</td>
-              <!-- 目前狀態 -->
-              <td>審核通過</td>
-              <td></td>
-            </tr>
-            <!-- 審核不通過 -->
-            <tr>
-              <!-- 圖片 -->
-              <td class="my-auto" style="max-width: 100px">
-                <a href="#"
-                  ><img
-                    src="../img/product.png"
-                    class="img-fluid rounded-start"
-                    alt="..."
-                /></a>
-              </td>
-              <!-- 專案名稱 -->
-              <th class="text-start" style="max-width: 200px">
-                <a href="#" style="text-decoration: none; color: #212529">
-                  家長必備! 圈圈的《祕密派對》-
-                  台灣原創專為2-6歲設計的身體保護翻翻書
-                </a>
-              </th>
-              <!-- 目前金額 -->
-              <td>0</td>
-              <!-- 目標金額 -->
-              <td>2,000,000</td>
-              <!-- 起始日期 -->
-              <td>2023-01-01</td>
-              <!-- 結束日期 -->
-              <td>2023-01-31</td>
-              <!-- 目前狀態 -->
-              <td>審核不通過</td>
-              <td></td>
-            </tr>
-            <!-- 募資中 -->
-            <tr>
-              <!-- 圖片 -->
-              <td class="my-auto" style="max-width: 100px">
-                <a href="#"
-                  ><img
-                    src="../img/product.png"
-                    class="img-fluid rounded-start"
-                    alt="..."
-                /></a>
-              </td>
-              <!-- 專案名稱 -->
-              <th class="text-start" style="max-width: 200px">
-                <a href="#" style="text-decoration: none; color: #212529">
-                  家長必備! 圈圈的《祕密派對》-
-                  台灣原創專為2-6歲設計的身體保護翻翻書
-                </a>
-              </th>
-              <!-- 目前金額 -->
-              <td>1,000</td>
-              <!-- 目標金額 -->
-              <td>2,000,000</td>
-              <!-- 起始日期 -->
-              <td>2023-01-01</td>
-              <!-- 結束日期 -->
-              <td>2023-01-31</td>
-              <!-- 目前狀態 -->
-              <td>募資中</td>
-              <!-- 查看 -->
-              <td></td>
-            </tr>
-            <!-- 募資成功 -->
-            <tr>
-              <!-- 圖片 -->
-              <td class="my-auto" style="max-width: 100px">
-                <a href="#"
-                  ><img
-                    src="../img/product.png"
-                    class="img-fluid rounded-start"
-                    alt="..."
-                /></a>
-              </td>
-              <!-- 專案名稱 -->
-              <th class="text-start" style="max-width: 200px">
-                <a href="#" style="text-decoration: none; color: #212529">
-                  家長必備! 圈圈的《祕密派對》-
-                  台灣原創專為2-6歲設計的身體保護翻翻書
-                </a>
-              </th>
-              <!-- 目前金額 -->
-              <td>1,000</td>
-              <!-- 目標金額 -->
-              <td>2,000</td>
-              <!-- 起始日期 -->
-              <td>2023-01-01</td>
-              <!-- 結束日期 -->
-              <td>2023-01-31</td>
-              <!-- 目前狀態 -->
-              <td>募資完成</td>
+              <td>{{prod.productStateId}}</td>
               <!-- 查看 -->
               <td>
-                <a href="./ProjectManage.html" class="btn btn-success">管理</a>
+                <a
+                  v-if="prod.productStateId=='募資成功'"
+                  href="./ProjectManage.html"
+                  class="btn btn-success"
+                  >管理</a
+                >
               </td>
-            </tr>
-            <!-- 生產階段 -->
-            <tr>
-              <!-- 圖片 -->
-              <td class="my-auto" style="max-width: 100px">
-                <a href="#"
-                  ><img
-                    src="../img/product.png"
-                    class="img-fluid rounded-start"
-                    alt="..."
-                /></a>
-              </td>
-              <!-- 專案名稱 -->
-              <th class="text-start" style="max-width: 200px">
-                <a href="#" style="text-decoration: none; color: #212529">
-                  家長必備! 圈圈的《祕密派對》-
-                  台灣原創專為2-6歲設計的身體保護翻翻書
-                </a>
-              </th>
-              <!-- 目前金額 -->
-              <td>1,000</td>
-              <!-- 目標金額 -->
-              <td>2,000</td>
-              <!-- 起始日期 -->
-              <td>2023-01-01</td>
-              <!-- 結束日期 -->
-              <td>2023-01-31</td>
-              <!-- 目前狀態 -->
-              <td>生產階段</td>
-              <!-- 查看 -->
-              <td>
-                <a href="./ProjectManage.html" class="btn btn-success">管理</a>
-              </td>
-            </tr>
-            <!-- 寄送產品 -->
-            <tr>
-              <!-- 圖片 -->
-              <td class="my-auto" style="max-width: 100px">
-                <a href="#"
-                  ><img
-                    src="../img/product.png"
-                    class="img-fluid rounded-start"
-                    alt="..."
-                /></a>
-              </td>
-              <!-- 專案名稱 -->
-              <th class="text-start" style="max-width: 200px">
-                <a href="#" style="text-decoration: none; color: #212529">
-                  家長必備! 圈圈的《祕密派對》-
-                  台灣原創專為2-6歲設計的身體保護翻翻書
-                </a>
-              </th>
-              <!-- 目前金額 -->
-              <td>1,000</td>
-              <!-- 目標金額 -->
-              <td>2,000</td>
-              <!-- 起始日期 -->
-              <td>2023-01-01</td>
-              <!-- 結束日期 -->
-              <td>2023-01-31</td>
-              <!-- 目前狀態 -->
-              <td>寄送產品</td>
-              <!-- 查看 -->
-              <td>
-                <a href="./ProjectManage.html" class="btn btn-success">管理</a>
-              </td>
-            </tr>
-            <!-- 募資失敗（未達標） -->
-            <tr>
-              <!-- 圖片 -->
-              <td class="my-auto" style="max-width: 100px">
-                <a href="#"
-                  ><img
-                    src="../img/product.png"
-                    class="img-fluid rounded-start"
-                    alt="..."
-                /></a>
-              </td>
-              <!-- 專案名稱 -->
-              <th class="text-start" style="max-width: 200px">
-                <a href="#" style="text-decoration: none; color: #212529">
-                  家長必備! 圈圈的《祕密派對》-
-                  台灣原創專為2-6歲設計的身體保護翻翻書
-                </a>
-              </th>
-              <!-- 目前金額 -->
-              <td>1,000</td>
-              <!-- 目標金額 -->
-              <td>2,000</td>
-              <!-- 起始日期 -->
-              <td>2023-01-01</td>
-              <!-- 結束日期 -->
-              <td>2023-01-31</td>
-              <!-- 目前狀態 -->
-              <td>未達標</td>
-              <!-- 查看 -->
-              <td></td>
             </tr>
           </tbody>
         </table>
       </div>
     </div>
-
+    <script src="../layout/membercentre_layout.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
       crossorigin="anonymous"
     ></script>
-    <script src="../layout/membercentre_layout.js"></script>
+    <script src="./Js_src/UserProject.js"></script>
   </body>
 </html>
