--- a/Fundraising/wwwroot/Login/login.html
+++ b/Fundraising/wwwroot/Login/login.html
@@ -188,7 +188,7 @@
                     </div>
 
                     <div class="field input-field">
-                        <input type="password" id="UserPassword" name="UserPassword" placeholder="輸入密碼" class="password" pattern="^(?=.*[a-zA-Z])(?=.*[0-9]).{8,}$" required="required" oninput="setCustomValidity('');" oninvalid="setCustomValidity('請輸入正確的密碼格式:含英數至少八個字元');" />
+                        <input type="password" id="UserPassword" name="UserPassword" placeholder="輸入密碼" class="password" pattern="^(?=.*[0-9]).{8,}$" required="required" oninput="setCustomValidity('');" oninvalid="setCustomValidity('請輸入正確的密碼格式:含英數至少八個字元');" />
                         <i class="uil uil-eye-slash eye-icon"></i>
                     </div>
 
