--- a/Fundraising/wwwroot/Proposal/proposal.html
+++ b/Fundraising/wwwroot/Proposal/proposal.html
@@ -244,7 +244,7 @@
                                                         <span>
                                                             <input
                                                                 style="width:120px; color: #047c51; font-size: 20px; border: none;"
-                                                                name="PlanPrice" id="PlanPrice" type="number"
+                                                                name="PlanPrice" id="PlanPrice" type="number" class="inputplan"
                                                                 value="100">
                                                         </span>
                                                     </div>
@@ -378,7 +378,7 @@
                     <div class="pagebtndiv">
                         <input id="prepage3" class="pagebtn btn btn-primary" type="button" value="◀&nbsp上一頁">
                         <span>&nbsp</span>
-                        <input class="btn btn-primary" type="button" id="proposalsubmit" value="提交專案">
+                        <input class="QAaddbtn btn btn-primary" type="button" id="proposalsubmit" value="提交專案">
                     </div>
 
                 </div>
