layout登入頭像變更

--- a/Fundraising/wwwroot/Proposal/proposal.html
+++ b/Fundraising/wwwroot/Proposal/proposal.html
@@ -46,7 +46,7 @@
                 </li>
             </ul>
 
-            <!-- <input type="button" onclick="OK()" value="OK"> -->
+            <input type="button" onclick="test()" value="test">
 
             <div class="tab-content container">
                 <!-- 專案大綱 -->
@@ -395,6 +395,8 @@
     var firstTab = new bootstrap.Tab(firstTabEl)
     firstTab.show()
 </script>
+
+
 <!-- 導入Layout -->
 <script src="../layout/layout.js"></script>
 <!-- 導入js -->
