--- a/Fundraising/wwwroot/Proposal/myproposal.html
+++ b/Fundraising/wwwroot/Proposal/myproposal.html
@@ -33,6 +33,7 @@
             padding: 10px 30px;
             font-size: .975rem;
             border-radius: 0px;
+            margin-top:30px;
         }
 
         .abtn:hover {
@@ -126,16 +127,16 @@
     <div class="propaltitle">
         <div class="propaltitle2">
             <h2 class="fs-2">我要的被實現</h2>
-            <p>用群眾的力量，讓有價值的事物獲得更好的機會</p>
+            <h4>用群眾的力量，讓有價值的事物獲得更好的機會</h4>
             <a href="./proposal.html" class="abtn btn btn-info" role="button">開始提案</a>
         </div>
     </div>
 
     <div class="propalcontent2">
         <div style="padding: 50px;">
-            <h2 style="padding-bottom: 50px;">為什麼需要群眾集資？</h2>
+            <h2>為什麼需要群眾集資？</h2>
             <div class="row row-cols-2 intro">
-                <div>
+                <div style="padding-top:50px">
                     <img src="../img/proposalbrand.png" alt="">
                 </div>
                 <div class="p2">
@@ -220,7 +221,7 @@
     <div class="propalfoot">
         <div class="propaltitle2">
             <h2>我要的被實現</h2>
-            <p>用群眾的力量，讓有價值的事物獲得更好的機會</p>
+            <h4>用群眾的力量，讓有價值的事物獲得更好的機會</h4>
             <a href="./proposal.html" class="abtn btn btn-info" role="button">開始提案</a>
         </div>
     </div>
