--- a/Fundraising/wwwroot/Proposal/myproposal.html
+++ b/Fundraising/wwwroot/Proposal/myproposal.html
@@ -33,14 +33,20 @@
             padding: 10px 30px;
             font-size: .975rem;
             border-radius: 0px;
-            margin-top:30px;
+            margin-top: 30px;
         }
 
-        .abtn:hover {
-            background-color: #047c51;
-            border: solid 2px #047c51;
-            color: white;
-        }
+            .abtn:active {
+                background-color: #047c51 !important;
+                border: solid 2px #047c51!important;
+                color:white !important;
+            }
+
+            .abtn:hover {
+                background-color: #047c51;
+                border: solid 2px #047c51;
+                color: white;
+            }
 
         .propaltitle {
             background-color: gainsboro;
@@ -69,10 +75,10 @@
             padding: 50px;
         }
 
-        .p2 p {
-            text-align: left;
-            color: black;
-        }
+            .p2 p {
+                text-align: left;
+                color: black;
+            }
 
         .propalcontent3 {
             background-color: white;
@@ -107,14 +113,15 @@
             padding: 10px 20px;
         }
 
-        .qAbtn:focus{
-            background-color: #047c51;
-        }
+            .qAbtn:active {
+                background-color: #047c51 !important;
+                border: solid 2px #047c51 !important;
+            }
 
-        .qAbtn:hover {
-            background-color: #047c51;
-            border: solid 2px #047c51;
-        }
+            .qAbtn:hover {
+                background-color: #047c51;
+                border: solid 2px #047c51;
+            }
 
         .good {
             padding: 0px 42px;
