--- a/Fundraising/wwwroot/Proposal/proposal.html
+++ b/Fundraising/wwwroot/Proposal/proposal.html
@@ -113,11 +113,7 @@
                                         <a href="javascript:;" class="file">上傳封面圖片
                                             <input style="cursor: pointer;" type="file" onchange="readURL(this)"
                                                 targetID="preview_progressbarTW_img" accept="image/jpeg, image/png"
-                                                name="Featured" id="Featured" class="form-control" required>
-                                            <div class="invalid-feedback"
-                                                style="background-color: transparent !important;">
-                                                請上傳封面圖片！
-                                            </div>
+                                                name="Featured" id="Featured">                                           
                                         </a>
                                         <p style="font-size: 14px; text-align: left;">請提供 JPEG、PNG 檔，圖片尺寸
                                             5:3； 2MB 以內。</p>
