--- a/Fundraising/wwwroot/Proposal/test.html
+++ b/Fundraising/wwwroot/Proposal/test.html
@@ -63,6 +63,9 @@
                 </ul>
             </div>
         </div>
+        <div>
+            <img style="width: 50px; height: 50px;" src="../img/headerbackgroudicon.png" alt="">
+        </div>
     </nav>
     <input type="button" onclick="test()" value="test">
 
